# mlops-assignment

./: .gitignore  Machine Learning Operations (Lim Gavin) (1).ipynb  app.py  pyproject.toml  requirements_streamlit.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
app_config/: choices.yaml  config.yaml
models/: car_price_pipeline.pkl  melbourne_housing_pipeline.pkl
sample_data/: sample_batch.csv
tools/: hydra_main.py
utils/: model_loader.py
