[project]
name = "mlops-assignment"
version = "0.1.0"
description = ""
authors = [
    {name = "MRbarchormee",email = "140133652+MRbarchormee@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "hydra-core (==1.3.2)",
    "dvc (==3.56.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
