[project]
name = "mlops-assignment"
version = "0.1.0"
description = ""
authors = [
    {name = "MRbarchormee",email = "140133652+MRbarchormee@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "hydra-core (==1.3.2)",
    "dvc (==3.56.0)",
    "streamlit (==1.33.0)",
    "pandas (==1.5.3)",
    "numpy (==1.25.2)",
    "scikit-learn (==1.2.2)",
    "pycaret (==3.2.0)",
    "mlflow (==2.12.1)",
    "catboost (==1.2.5)",
    "lightgbm (==4.6.0)",
    "pyyaml (==6.0.2)",
    "omegaconf (==2.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
